assets/css/styles.css
html, body {
  height: 100%;
  min-height: 100%;
  overflow: hidden;
}
.header,
p,
li,
a,
span {
      font-family: 'Lato', sans-serif;
}
#main {
  opacity:0;
}
#weather,
#time {
  padding:0px;
}
li {
  font-style: italic;
}
.header {
  font-weight: bold;
  font-size: 20px;
  padding-left: 30px;
  padding-top: 5px;
  padding-right: 5px;
}
.header > .wrapperR > p {
  font-size: 15px;
  font-weight: bold;
}
#displaydiv {
  text-align: center;
  margin-left: 20%;
  margin-right:20%;
  margin-top: 100px;
  background-color: rgba(255,255,255,0.24);
  /*  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);*/
}
.NBbutton {
  color: white;
  font-family: 'Lato', sans-serif;
}
.NBbutton:hover {
  text-decoration: none;
}
.w3-button:hover {
    color: rgb(255, 255, 255)!important;
    background-color: #400240!important;
}
.w3-button:active {
    color: rgb(255, 255, 255)!important;
    background-color: #400240!important;
}
.w3-button:visited {
    color: rgb(255, 255, 255)!important;
    background-color: #400240!important;
    text-decoration: none!important;
}
/*input[type=text] {
    width: 130px;
    -webkit-transition: width 0.4s ease-in-out !important;
    transition: width 0.4s ease-in-out !important;
}*/

/* When the input field gets focus, change its width to 100% */
/*input[type=text]:focus {
    width: 30%;
}*/
#NBname {
/*  margin-right: 850px;*/
      padding: 2px;
    font-size: 20px;
}

.TBnavbar {
  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
  background-color: #400240;
}
#hamburger {
  background-color: #400240;
  color: white;
  padding-right: 12px;
  padding-top: 1px;
  margin: 0px;
  font-size: 20px!important;
}
.w3-sidebar {
  right: 0px;
}
.barsearch {
  float: right;
    font-family: 'Lato', sans-serif;
}
body { 
  background: url(https://static.pexels.com/photos/59519/pexels-photo-59519.jpeg) no-repeat center center fixed;
/*    http://diysolarpanelsv.com/images/clipart-blue-background-14.jpg */
/*http://www.coricostache.com/wp-content/uploads/2016/03/Travel_Photography_Blog_SanFrancisco_201111071.jpg*/
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
/*  background-color: #e8e8e8;*/
}

#question {
  color: white;
  margin-top: 0px;
  font-family: 'Lato', sans-serif;
  text-shadow: 1px 3px 7px #6d6868;
  font-weight: bold;
}

#city-input {
/*      background-image: url('../images/searchicon.png');*/ /* Add a search icon to input */
    background-position: 10px 12px; /* Position the search icon */
    background-repeat: no-repeat;
  padding: 10px;
  width: 80%;
/*  border-radius: 10px;*/
    font-family: 'Lato', sans-serif;
}
#date-input {
  margin-top: 20px;
  padding: 10px;
  width: 80%;
/*  border-radius: 10px;*/
    font-family: 'Lato', sans-serif;
}
#search {
  margin-top: 10px;
/*  border-radius: 10px;
  margin-bottom: 30px;*/
    font-family: 'Lato', sans-serif;
}
#myInput {
    background-image: url('/css/searchicon.png'); /* Add a search icon to input */
    background-position: 10px 12px; /* Position the search icon */
    background-repeat: no-repeat; /* Do not repeat the icon image */
    width: 100%; /* Full-width */
    font-size: 16px; /* Increase font-size */
    padding: 12px 20px 12px 40px; /* Add some padding */
    border: 1px solid #ddd; /* Add a grey border */
    margin-bottom: 12px; /* Add some space below the input */
}
#homelogo {
margin-top: 20px;
margin-bottom: 10px;
}
#infocarddiv {
  margin-left: 80px;
  margin-bottom: 5px;
  padding-bottom: 30px;
  background-color: rgba(255,255,255,0.86);
}
.infocardRight {
  width: 80%;
  margin-left: 30px;
  margin-top: 0px;
  margin-bottom: 5px;
  padding-bottom: 30px;
  background-color: rgba(255,255,255,0.86);
}
/*.infocardRight > .header >.wrapper {
    max-height: 350px;
    overflow: auto;
}*/
/*.blurb {
  margin: -15px 10px 25px 15px;
}*/
.foodBlurb {
  margin: 0px 15px 0px 15px;
}
.foodBlurb > .blurb { 
  font-size: 15px;
  font-weight: bold;
 }
 .weatherBlurb > .blurb {
  font-size: 15px;
  font-weight: bold;
 }
.weatherBlurb {
  margin: 0px 15px 0px 15px;
}

::-webkit-scrollbar {
    width: 12px;
}
.subInfocardRight {
  margin-right: 25px;
  margin-top: 5px;
}
::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
    border-radius: 10px;
}
 
::-webkit-scrollbar-thumb {
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
}
.header > .wrapper > img {
  max-width: 90%;
}
.wrapper {
  padding-left: 30px;
  padding-right: 30px;
}
.wrapperR {
  padding-right: 25px;
  padding-top: 10px;
}
#cityfacts {
  padding-top: 8px;
}
#cityimage {
  /*width: 100%;*/
  max-height: 200px;
}

/*CODE PEN SEARCH*/

@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
@import url(https://raw.github.com/FortAwesome/Font-Awesome/master/docs/assets/css/font-awesome.min.css);

body {
  font-size: 15px;
}
#wrap {
  margin: 50px 100px;
  display: inline-block;
  position: relative;
  height: 60px;
  float: right;
  padding: 0;
  position: relative;
}

input[type="text"] {
  height: 20px;
  font-size: 20px;
  display: inline-block;
  font-weight: 100;
  border: none;
  outline: none;
  color: white;
  padding: 3px;
  padding-right: 60px;
  width: 0px;
  position: absolute;
  top: 10px;
  right: 38px;
  background: none;
  z-index: 3;
  transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
  cursor: pointer;
}

input[type="text"]:focus:hover {
  border-bottom: 1px solid #BBB;
}

input[type="text"]:focus {
  width: 400px;
  z-index: 1;
  border-bottom: 1px solid #BBB;
  cursor: text;
}
input[type="submit"] {
    height: 32px;
    width: 32px;
  display: inline-block;
  color: white;
  float: right;
  background: url(../images/searchicon.png) center center no-repeat;
  color:white;
  text-indent: -10000px;
  border: none;
  position: absolute;
  top: 0;
  right: 38px;
  z-index: 2;
  cursor: pointer;
/*  opacity: 0.4;*/
  cursor: pointer;
  transition: opacity .4s ease;
}

input[type="submit"]:hover {
  opacity: 0.8;
  box-shadow: none;
}
#map {
  height: 300px;
  width: 100%;
  top: 0px;
  left: 0px;
}
/*#cityblurb {
  padding: 3%;
}*/
.city {
  margin-top: -5px;
  padding-bottom: 10px;
  padding-left: 0px;
  margin-left: 10px;
  font-size: 190%;
}
#image {
  display: inline;
}
.weatherImg {
  width: 50px;
  float: left;
  margin-left: -20px;
}
.temp {
  float: left;
  margin-left: 5px;
}
.topText {
  margin-top: 10px;
  margin-left: 15px;
}
#time {
  margin-top: 10px;
}
.itemDisplay {
  height: 100px;
  width: 100%;
}
.clock {
  font-size: 200%;
  margin-top: 5px;
  margin-left: 40px;
  float: left;
}
#viewCount {
  line-height: 30px;
}
.iconImg {
  max-height: 15px;
}

.placesDispImg { 
  max-height: 30px;
 }

@media screen and (max-width: 767px) {
  html, body {
    height: 100%;
    min-height: 100%;
    overflow: auto;
}
  #main {
    margin-top: 25px;
  }
  #infocarddiv {
    width: 90%;
    margin-left: 5%;
    padding-bottom: 30px;
    background-color: rgba(255,255,255,0.86);
  }
  .infocardRight {
    width: 90%;
    margin-left: 5%;
    margin-top: 1px;
    margin-bottom: 4px;
    padding-bottom: 30px;
    background-color: rgba(255,255,255,0.86);
  }

  #map {
    width: 100%;
  }
}
@media screen and (min-width: 768px) {
  html, body {
    height: 100%;
    min-height: 100%;
    overflow: hidden;
  }
  #main {
    margin-top: 25px;
    /*height: 900px;*/
    overflow: auto;
    overflow-x: hidden;
  }
  .leftColumn {
    height: 900px;
    overflow: hidden;
  }
  .rightColumn {
    height: 900px;
    overflow: auto;
  }

  .description {
    /*some descriptions are long; can we change the css to allow users to scroll?*/
    overflow: auto;
  }
}
@media screen and (max-height: 900px) {
  .leftColumn {
    height: 900px;
    overflow-y: auto;
  }

